<resources>

    <string name="app_name">StediVodu</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Vodi računa o vodi</string>
    <string name="server">http://minimaldevelop.com/phpapi/</string>
    <string name="username">zarko</string>
    <string name="password">zarko</string>
    <string name="nasli_smo_te">Trenutna lokacija: </string>
    <string name="promeni">Promeni</string>
    <string name="gdesi">Nađi sebe?</string>
    <string name="zivis">Gde živiš?</string>
    <string name="radio_voda">Voda</string>
    <string name="radio_vodaikom">Voda i kanalizacija</string>
    <string name="unesi_racun">Unesi iznos mesečnog računa:</string>
    <string name="posalji">Pošalji</string>
    <string name="kuca">Kuća</string>
    <string name="stan">Stan</string>
    <string name="izracunaj">Izračunaj moju potrošnju</string>
    <string name="kviz">Kviz: Koliko znam o vodi?</string>
    <string name="nadji">Nađi moju lokaciju</string>
    <string name="statistika">Moja statistika</string>
	<string name="ispodproseka">Ispod\nProseka</string>
	<string name="iznadproseka">Iznad\nProseka</string>
	<string name="trosi">građana troši %1$s din</string>
	<string name="prosek">Prosek %1$s din</string>
	<string name="vasracun">Vaš račun od %1$s din je</string>
	<string name="trazim">Tražim…</string>
	<string name="izaberi_grad">Izaberi grad</string>
</resources>