<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="4dp" >

    <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        
        
        <LinearLayout
            android:id="@+id/fakeBUtton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/mainimage"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textGrad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="90dp"
            android:text="@string/trazim"
            android:textSize="26dp"
            android:textStyle="bold"
            android:textColor="@drawable/textselector" />

        <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/izaberi_grad"
            android:textSize="16dp"
            android:textColor="@drawable/textselector" />

    </LinearLayout>
        
    </LinearLayout>

    
    <Button
        
        android:id="@+id/buttonIzracunaj"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/izracunaj" />
    
    <Button
        android:layout_marginTop="4dp"
        android:id="@+id/buttonKviz"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/kviz" />
    
    <Button
        android:layout_marginTop="4dp"
        android:id="@+id/buttonNadji"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:text="@string/nadji" />

</LinearLayout>