<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/textZivis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/zivis"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageKuca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:paddingTop="10dp"
                android:src="@drawable/houseimage" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuca"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stan"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageZgrada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingRight="15dp"
                android:src="@drawable/buildingimage" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider"
            android:orientation="vertical" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <RadioButton
                android:id="@+id/radioVoda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_voda" />

            <RadioButton
                android:id="@+id/radioVodaiKom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_vodaikom" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/unesi_racun"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/input_form_l"
                android:ems="10"
                android:inputType="numberDecimal" >
            </EditText>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/input_form_r"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
